--- a/leoapp/package.json
+++ b/leoapp/package.json
@@ -2,12 +2,16 @@
   "name": "leoapp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://youtrip.azurewebsites.net/",
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "react": "^16.6.3",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-select": "^2.1.2",
+    "reactstrap": "^6.5.0",
     "styled-components": "^4.1.2"
   },
   "scripts": {
