Ajustes para deploy en azure

--- a/leoapp/.vscode/settings.json
+++ b/leoapp/.vscode/settings.json
@@ -4,5 +4,5 @@
         "node_modules{,/**}"
     ],
     "appService.deploySubpath": "",
-    "appService.defaultWebAppToDeploy": "/subscriptions/6839a1ad-1c62-479f-80f1-af657828db3a/resourceGroups/appsvc_rg_linux_centralus/providers/Microsoft.Web/sites/YouTrip"
+    "appService.defaultWebAppToDeploy": "/subscriptions/6839a1ad-1c62-479f-80f1-af657828db3a/resourceGroups/appsvc_rg_linux_centralus/providers/Microsoft.Web/sites/YourTrips"
 }
