--- a/leoapp/package.json
+++ b/leoapp/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://yourtrips.azurewebsites.net/",
   "dependencies": {
+    "@material-ui/core": "^3.7.0",
     "antd": "^3.11.2",
     "bootstrap": "^4.1.3",
     "react": "^16.6.3",
