--- a/leoapp/package.json
+++ b/leoapp/package.json
@@ -9,9 +9,10 @@
     "bootstrap": "^4.1.3",
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
+    "react-device-detect": "^1.6.1",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
+    "react-scripts": "^2.1.2",
     "react-select": "^2.1.2",
     "reactstrap": "^6.5.0",
     "reqwest": "^2.0.5",
