--- a/leoapp/package.json
+++ b/leoapp/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^4.1.3",
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
+    "react-cookie": "^3.0.8",
     "react-device-detect": "^1.6.1",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
