--- a/leoapp/package.json
+++ b/leoapp/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@material-ui/core": "^3.7.0",
     "antd": "^3.11.2",
+    "auth0-js": "^9.9.1",
     "bootstrap": "^4.1.3",
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
