--- a/leoapp/package.json
+++ b/leoapp/package.json
@@ -8,6 +8,7 @@
     "antd": "^3.11.2",
     "auth0-js": "^9.9.1",
     "bootstrap": "^4.1.3",
+    "rc-drawer": "^1.7.7",
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
     "react-cookie": "^3.0.8",
