--- a/leoapp/package.json
+++ b/leoapp/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^3.7.0",
     "antd": "^3.11.2",
     "auth0-js": "^9.9.1",
+    "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "rc-drawer": "^1.7.7",
     "react": "^16.6.3",
@@ -15,7 +16,7 @@
     "react-device-detect": "^1.6.1",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^2.1.5",
     "react-select": "^2.1.2",
     "reactstrap": "^6.5.0",
     "reqwest": "^2.0.5",
